# Mantella

./: .clang-format  .code-checks.sh  .code.sh  .compile.sh  .develop.sh  .gitattributes  .gitignore  .minify.sh  .setup.sh  .travis-checks.sh  .travis.yml  CMakeLists.txt  CNAME  CONTRIBUTING.md  CodeStyle  Dockerfile  LICENSE  LICENSE.txt  PULL_REQUEST_TEMPLATE.md  README copy.md  README.md  S.mat  Vagrantfile  Y.mat  _config.yml  api-overview.md  api-reference-draft.md  api-reference.md  appveyor.yml  build.xml  changelog.html  changelog.md  clusterJobWrapper.sh  config.json  configuration.md  contact.html  contact.md  create_doc.py  data-privacy.html  data-privacy.md  (+26 more)
apps/development/: CMakeLists.txt  mpi.cpp
apps/mpi/: CMakeLists.txt  parallelSPSO11.cpp
apps/robotic/: CMakeLists.txt  parallelKinematicMachine_3prrr_intersectionBased.cpp  parallelKinematicMachine_3prrr_intersectionBased.hpp  parallelKinematicMachine_3prrr_trigonometryBased.cpp  parallelKinematicMachine_3prrr_trigonometryBased.hpp  parallelKinematicMachine_6prus_intersectionBased.cpp  parallelKinematicMachine_6prus_intersectionBased.hpp  parallelKinematicMachine_6prus_trigonometryBased.cpp  parallelKinematicMachine_6prus_trigonometryBased.hpp  robotic.cpp
apps/romeo/: CMakeLists.txt  main.cpp
benchmark/Mantella/: CMakeLists.txt  Dockerfile  benchmark.cpp  benchmark.cpp.cmake
examples/mpi/: CMakeLists.txt  parallelSPSO11.cpp
examples/multiResolutionGridSearch/: CMakeLists.txt  main.cpp
examples/onlineOptimisation/: CMakeLists.txt  main.cpp
examples/parallelOptimisation/: CMakeLists.txt  evaluationsMatrix.cpp  evaluationsMatrixSerial.cpp  generateParametersList.cpp  parallelEvaluations.cpp  serialEvaluations.cpp  standardParticleSwarmOptimisation2011ParameterStudy.cpp
examples/populationBased/: CMAES.cpp  CMakeLists.txt  MCS.cpp  Output.txt  convertOutput.py
test/: CMakeLists.txt  catchExtension.cpp  catchExtension.hpp  catchHelper.cpp  catchHelper.hpp  expected.m  helper.cpp  helper.hpp  main.cpp  main.cpp.cmake  testAlgebra.cpp  testArmadillo.cpp  testAssert.cpp  testCatchExtension.cpp  testCatchHelper.cpp  testCombinatorics.cpp  testConfig.cpp  testCorrelationFunction.cpp  testDistanceFunction.cpp  testGeometry.cpp  testKriging.cpp  testMpi.cpp  testNumberTheory.cpp  testNumericalAnalysis.cpp  testOptimisationAlgorithm.cpp  testOptimisationProblem.cpp  testOrbitalMechanics.cpp  testProbability.cpp  testPropertyAnalysis.cpp  testRandomNumberGenerator.cpp  testSamplesAnalysis.cpp  testSamplesSelection.cpp  testStatistics.cpp  testTopology.cpp
test/cmake/: FindMantella.cmake
test/correlationFunction/: testExponentialCorrelationFunction.cpp  testGaussianCorrelationFunction.cpp  testPolynomialCorrelationFunction.cpp  testSplineCorrelationFunction.cpp
test/data/: _objectiveValues_1x100.input  _parameters_3x100.input  delta101,2.mat  delta101,40.mat  delta21,2.mat  delta21,40.mat  elitists_1x10.expected  expectedF1,2.mat  expectedF1,40.mat  expectedF10,2.mat  expectedF10,40.mat  expectedF11,2.mat  expectedF11,40.mat  expectedF12,2.mat  expectedF12,40.mat  expectedF13,2.mat  expectedF13,40.mat  expectedF14,2.mat  expectedF14,40.mat  expectedF15,2.mat  expectedF15,40.mat  expectedF16,2.mat  expectedF16,40.mat  expectedF17,2.mat  expectedF17,40.mat  expectedF18,2.mat  expectedF18,40.mat  expectedF19,2.mat  expectedF19,40.mat  expectedF2,2.mat  expectedF2,40.mat  expectedF20,2.mat  expectedF20,40.mat  expectedF21,2.mat  expectedF21,40.mat  expectedF22,2.mat  expectedF22,40.mat  expectedF23,2.mat  expectedF23,40.mat  expectedF24,2.mat  (+26 more)
test/data/helper/: _randomCovarianceMatrix_40x40.input  getCombinations_n10_k6.expected
test/distanceFunction/: testEuclideanDistance.cpp  testMahalanobisDistance.cpp  testPNorm.cpp
test/helper/: testAssert.cpp  testCereal.cpp  testFilesystem.cpp  testGeometry.cpp  testGeometry.hpp  testMpi.cpp  testPrintable.cpp  testQuasiRandomSequence.cpp  testRandom.cpp  testRegression.cpp  testRng.cpp  testSetTheory.cpp  testStatistic.cpp  testString.cpp  testString.hpp  testUnorderedContainer.cpp
test/optimisationAlgorithm/: testDifferentialEvolution.cpp  testGridSearch.cpp  testHillClimbing.cpp  testHookeJeevesAlgorithm.cpp  testParticleSwarmOptimisation.cpp  testPopulationBasedOptimisationAlgorithm.cpp  testRandomSearch.cpp  testSamplingBasedOptimisationAlgorithm.cpp  testSimulatedAnnealing.cpp  testTrajectoryBasedOptimisationAlgorithm.cpp
test/optimisationAlgorithm/populationBasedOptimisationAlgorithm/: testDifferentialEvolution.cpp  testParticleSwarmOptimisation.cpp
test/optimisationAlgorithm/samplingBasedOptimisationAlgorithm/: randomSearch.cpp  testGridSearch.cpp  testRandomSearch.cpp
test/optimisationAlgorithm/trajectoryBasedAlgorithm/: testHillClimbing.cpp  testHookeJeeves.cpp  testSimulatedAnnealing.cpp  trajectoryBasedAlgorithmHelper.cpp
test/optimisationAlgorithm/trajectoryBasedOptimisationAlgorithm/: testHillClimbing.cpp  testHookeJeevesAlgorithm.cpp  testSimulatedAnnealing.cpp
test/optimisationProblem/: testBenchmarkOptimisationProblem.cpp  testBlackBoxOptimisationBenchmark.cpp  testKinematicallyRedundantMachineProblem.cpp  testKinematicallyRedundantMachines.cpp  testRoboticsOptimisationProblem.cpp  testSurrogateModel.cpp
test/optimisationProblem/benchmark/: expectedBlackBoxOptimisationBenchmark2013.m  testBenchmarkProblem.hpp  testBlackBoxOptimisationBenchmark2013.hpp
test/optimisationProblem/benchmarkOptimisationProblem/: testBlackBoxOptimisationBenchmark.cpp
test/optimisationProblem/blackBoxOptimisationBenchmark/: testBentCigarFunction.cpp  (+23 more)
test/propertyAnalysis/: testActivePropertyAnalysis.cpp  testPassivePropertyAnalysis.cpp
test/samplesSelection/: testBestFittingSamplesSelection.cpp  testBestNeighbourhoodSamplesSelection.cpp  testBestSamplesSelection.cpp  testRandomSamplesSelection.cpp
test/surrogateModel/: testArtificialNeuralNetwork.cpp  testGaussianMixtureModel.cpp  testKrigingModel.cpp  testLinearFunctionModel.cpp  testMultivariateAdaptiveRegressionSplinesModel.cpp  testQuadraticFunctionModel.cpp  testRadialBasisFunctionModel.cpp
(+5483 files in other folders)
